# snowdrop-bot

./: .env  Cargo.toml  Procfile  readme.md  sqlx-data.json
migrations/: 20211202202315_chats.sql  20211202202358_users.sql  20211202202450_daily_stats.sql  20211204114941_old_stats.sql  20211204123415_chats_add_is_validated.sql  20211204124117_fix_is_validated.sql
src/: daily_stats.rs  error.rs  main.rs  telegram_api.rs  total_stats.rs  utils.rs
src/api/: daily_stats.rs  mod.rs  webhook.rs
src/db/: chats.rs  daily_stats.rs  mod.rs  total_stats.rs  users.rs
src/models/: chats.rs  daily_stats.rs  mod.rs  users.rs
