[package]
name = "snowdrop_bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.11"
actix-service = "2.0.1"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5.0", features = [
    "runtime-actix-native-tls",
    "mysql",
    "macros",
    "migrate",
    "chrono",
    "postgres",
    "offline",
    "bigdecimal",
] }
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
thiserror = "1.0.30"
reqwest = { version = "0.11.7", features = ["json"] }
lazy_static = "1.4.0"
bigdecimal = { version = "0.2.0", features = ["serde"] }
